<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:padding="@dimen/dp5">

        <TextView
            style="@style/TextStyleDetailBill"
            android:text="#"
            android:textColor="#000" />

        <TextView
            style="@style/TextStyleDetailBill"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/product" />

        <TextView
            style="@style/TextStyleDetailBill"
            android:layout_marginEnd="@dimen/dp10"
            android:text="@string/quantity" />

        <TextView
            style="@style/TextStyleDetailBill"
            android:layout_marginEnd="@dimen/dp10"
            android:text="@string/price" />

        <TextView
            style="@style/TextStyleDetailBill"
            android:layout_marginEnd="@dimen/dp10"
            android:text="@string/money" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginHorizontal="@dimen/dp10">

        <TextView
            android:id="@+id/txt1"
            style="@style/textStyleTitle"
            android:text="@string/total_price" />

        <TextView
            android:id="@+id/txtgiasanphamhoadon"
            style="@style/textStyleTitle"
            android:layout_alignParentEnd="true"
            android:text="@string/price_1" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/txt1"
            android:padding="5dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtdc"
            style="@style/TextStyleDetailBill"
            android:layout_below="@+id/txt2"
            android:gravity="center"
            android:text="Hỗ Trợ : Mọi thắc mắt xin liên hệ thaibasang8@gmail.com"
            android:textSize="@dimen/sp16" />

        <TextView
            style="@style/TextStyleDetailBill"
            android:layout_below="@+id/txtdc"
            android:gravity="center"
            android:text="Địa Chỉ: Nam Kỳ-Khởi Nghĩa, Hòa Quý, Ngũ Hành Sơn, Đà Nẵng"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp2"
        android:layout_marginHorizontal="@dimen/dp10"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@color/h6F6E6E" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewhoadon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_marginHorizontal="@dimen/dp10"
        android:layout_weight="1"
        android:padding="@dimen/dp5" />
</LinearLayout>