<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:background="@color/h003080"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dp15"
        android:paddingHorizontal="@dimen/dp20"
        app:layout_constraintBottom_toTopOf="@+id/txtInformation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dp75"
            android:layout_height="@dimen/dp75"
            android:src="@drawable/ic_menu" />

        <TextView
            style="@style/textStyleTitle"
            android:layout_marginVertical="@dimen/dp30"
            android:text="@string/review_my_eat_in_order"
            android:textColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_marginHorizontal="@dimen/dp4"
        android:layout_marginStart="@dimen/dp10"
        android:background="@drawable/boder_textview"
        android:padding="@dimen/dp15"
        android:text="@string/my_order_eat_in"
        app:layout_constraintBottom_toTopOf="@+id/btnDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDone"
        style="@style/buttonStyle"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp40"
        android:layout_marginEnd="@dimen/dp20"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        app:layout_constraintLeft_toRightOf="@+id/btnCancel"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/buttonStyle"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginStart="@dimen/dp30"
        android:text="@string/cancel_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnDone" />
</androidx.constraintlayout.widget.ConstraintLayout>