<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        android:background="@color/hff1744"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linear1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textStyleTitle"
            android:text="@string/fast_easy"
            android:textColor="@color/white"
            android:textStyle="normal" />

        <TextView
            style="@style/textStyleTitle"
            android:layout_marginTop="@dimen/dp10"
            android:lineSpacingExtra="@dimen/dp10"
            android:text="@string/order_pay_here"
            android:textColor="@color/white"
            android:textSize="@dimen/sp50"
            app:drawableBottomCompat="@drawable/ic_touch_app" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_touch"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="@dimen/dp75"
            android:layout_height="@dimen/dp75"
            android:src="@drawable/ic_menu" />

        <TextView
            style="@style/textStyleTitle"
            android:layout_marginStart="@dimen/dp5"
            android:text="@string/touch_to_start"
            android:textColor="@color/white"
            android:textStyle="normal" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>