<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="action"
            type="com.example.kiotapp.ui.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/h003080">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/dp75"
                android:layout_height="@dimen/dp75"
                android:src="@drawable/ic_menu" />

            <TextView
                style="@style/textStyleTitle"
                android:layout_marginTop="@dimen/dp30"
                android:text="@string/your_order_has_been_placed"
                android:textColor="@color/white" />

            <TextView
                style="@style/textStyleTitle"
                android:layout_marginTop="@dimen/dp30"
                android:text="@string/thank_you"
                android:textColor="@color/white"
                android:textSize="@dimen/sp50" />

            <TextView
                style="@style/textStyleTitle"
                android:layout_marginTop="@dimen/dp30"
                android:text="@{@string/your_order_number_is(action.idBill)}"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/buttonStyle"
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp40"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginStart="@dimen/dp30"
            android:text="@string/order_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>