<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/h003080"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="@dimen/dp75"
        android:layout_height="@dimen/dp75"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toTopOf="@+id/card2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        style="@style/textStyleTitle"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/select_payment_type"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card2">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp5"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp200"
                android:scaleType="fitXY"
                android:src="@drawable/ic_payman1" />

            <TextView
                style="@style/textStyleTitle"
                android:height="@dimen/dp50"
                android:text="@string/eat_in"
                android:textStyle="normal" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        android:layout_marginEnd="@dimen/dp20"
        app:cardCornerRadius="@dimen/dp5"
        app:layout_constraintBottom_toBottomOf="@+id/card1"
        app:layout_constraintLeft_toRightOf="@+id/card1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card1">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp5"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payman2" />

            <TextView
                style="@style/textStyleTitle"
                android:height="@dimen/dp50"
                android:text="@string/take_out"
                android:textStyle="normal" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>