<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp10">

        <LinearLayout
            android:id="@+id/recyclerTab"
            android:layout_width="@dimen/dp70"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/tab0"
                layout="@layout/item_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:src="@{R.drawable.ic_menu}"
                app:type="@{Const.TAB1}"
                app:viewModel="@{action}" />

            <include
                android:id="@+id/tab1"
                layout="@layout/item_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:src="@{R.drawable.ic_beverages}"
                app:type="@{Const.TAB2}"
                app:viewModel="@{action}" />

            <include
                android:id="@+id/tab2"
                layout="@layout/item_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:src="@{R.drawable.ic_breakfast}"
                app:type="@{Const.TAB3}"
                app:viewModel="@{action}" />

            <include
                android:id="@+id/tab3"
                layout="@layout/item_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:src="@{R.drawable.ic_burgers}"
                app:type="@{Const.TAB4}"
                app:viewModel="@{action}" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtTitle1"
            style="@style/textStyleTitle"
            android:text="@string/main_menu"
            app:layout_constraintLeft_toRightOf="@+id/recyclerTab"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp4"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/dp20"
            android:background="@drawable/boder_textview"
            android:padding="@dimen/dp15"
            android:text="@{@string/my_order_eat_in(action.myOrderGeneral.tax,action.myOrderGeneral.total,action.myOrderGeneral.items)}"
            app:layout_constraintBottom_toTopOf="@+id/btnDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            style="@style/buttonStyle"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp20"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="@id/btnCancel"
            app:layout_constraintLeft_toRightOf="@+id/btnCancel"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/buttonStyle"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp40"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp10"
            android:text="@string/cancel_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnDone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHome"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/txtInformation"
            app:layout_constraintLeft_toRightOf="@+id/recyclerTab"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle1"
            app:spanCount="@integer/product_home_span_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="com.example.kiotapp.R" />

        <import type="com.example.kiotapp.utils.Const" />

        <variable
            name="action"
            type="com.example.kiotapp.ui.viewmodel.HomeViewModel" />
    </data>
</layout>